--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <nav class="navbar navbar-dark navbar-expand-lg py-0">
           <a href="index.html" class="navbar-brand">
             <h1 class="text-white fw-bold d-block">
-              High<span class="text-secondary">Tech</span>
+              AMIQA<span class="text-secondary">UK</span>
             </h1>
           </a>
           <button
@@ -138,7 +138,7 @@
                   <a href="404.html" class="dropdown-item">404 Page</a>
                 </div>
               </div>
-              <a href="contact.html" class="nav-item nav-link">Contact</a>
+              <a href="contacts.html" class="nav-item nav-link">Contact</a>
             </div>
           </div>
           <div class="d-none d-xl-flex flex-shirink-0">
