--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
       <div class="container">
         <nav class="navbar navbar-dark navbar-expand-lg py-0">
           <a href="index.html" class="navbar-brand">
-            <h1 class="text-white fw-bold d-block">
-              AMIQA<span class="text-secondary">UK</span>
-            </h1>
+            <img src="img/amiqa logo.png" width="120" alt="logo" />
           </a>
           <button
             type="button"
@@ -121,6 +119,7 @@
               >
               <a href="about.html" class="nav-item nav-link">About</a>
               <a href="service.html" class="nav-item nav-link">Services</a>
+              <!--
               <a href="project.html" class="nav-item nav-link">Projects</a>
               <div class="nav-item dropdown">
                 <a
@@ -138,7 +137,8 @@
                   <a href="404.html" class="dropdown-item">404 Page</a>
                 </div>
               </div>
-              <a href="contacts.html" class="nav-item nav-link">Contact</a>
+            -->
+              <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
           </div>
           <div class="d-none d-xl-flex flex-shirink-0">
@@ -155,7 +155,7 @@
             </div>
             <div class="d-flex flex-column pe-4 border-end">
               <span class="text-white-50">Have any questions?</span>
-              <span class="text-secondary">Call: +447438966772</span>
+              <span class="text-secondary">Whatsapp: +447438966772</span>
             </div>
             <div class="d-flex align-items-center justify-content-center ms-4">
               <a href="#"><i class="bi bi-search text-white fa-2x"></i> </a>
